[package]
name = "syslaunch"
version = "0.0.1"
authors = ["Cole Heslinga <cole.heslinga@gmail.com>"]
description = "A simple, lightweight init system designed for Linux."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.21.0"
